Modernize netconf-server-mdsal
Eliminate most of deprecation warnings by migrating to
DataObjectIdentifier.

Change-Id: I6fb2a22be4dc7c31d8f04907fa5da79fef71802a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>